--- a/mingw-w64-libwebp/PKGBUILD
+++ b/mingw-w64-libwebp/PKGBUILD
@@ -1,41 +1,71 @@
 # Maintainer: Alexey Pavlov <alexpux@gmail.com>
+# Contributor: Andrew Sun <adsun701@gmail.com>
 
 _realname=libwebp
 pkgbase=mingw-w64-${_realname}
-pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.1.0
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
+pkgver=1.3.2
 pkgrel=1
-pkgdesc="the WebP library. Includes conversion tools (mingw-w64)"
+pkgdesc="A library to encode and decode images in WebP format (mingw-w64)"
 arch=('any')
-url="https://developers.google.com/speed/webp/"
-license=('BSD')
+url='https://developers.google.com/speed/webp/'
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-giflib"
          "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
          "${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libtiff")
-makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
-source=(https://storage.googleapis.com/downloads.webmproject.org/releases/webp/${_realname}-${pkgver}.tar.gz)
-sha256sums=('98a052268cc4d5ece27f76572a7f50293f439c17a98e67c4ea0c7ed6f50ef043')
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-ninja")
+provides=("${MINGW_PACKAGE_PREFIX}-libsharpyuv")
+source=(${_realname}-${pkgver}.tar.gz::https://github.com/webmproject/libwebp/archive/v${pkgver}.tar.gz
+        0001-mingw-cmake-output.patch)
+sha256sums=('c2c2f521fa468e3c5949ab698c2da410f5dce1c5e99f5ad9e70e0e8446b86505'
+            '30ed42b782af427f57049abada30ce6d4d62318ee13014585cb352b570c68e3d')
 validpgpkeys=('6B0E6B70976DE303EDF2F601F9C3D6BDB8232B5D')
 
+prepare() {
+  cd "${srcdir}/${_realname}-${pkgver}"
+
+  patch -Np1 -i "${srcdir}"/0001-mingw-cmake-output.patch
+}
+
 build() {
-  mkdir -p ${srcdir}/${MINGW_CHOST}
-  cd "${srcdir}/${MINGW_CHOST}"
-  export LIBS="-ltiff -ljpeg -lz"
-  ../${_realname}-${pkgver}/configure \
-    --build=${MINGW_CHOST} \
-    --host=${MINGW_CHOST} \
-    --prefix=${MINGW_PREFIX} \
-    --enable-static \
-    --disable-shared \
-    --enable-libwebpmux \
-    --enable-libwebpdemux \
-    --enable-libwebpdecoder \
-    --enable-libwebpextras
-  make -j1
+  declare -a extra_config
+  if check_option "debug" "n"; then
+    extra_config+=("-DCMAKE_BUILD_TYPE=Release")
+  else
+    extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  cd "${srcdir}/${_realname}-${pkgver}"
+  mkdir -p "${srcdir}/build-${MSYSTEM}-static" && cd "${srcdir}/build-${MSYSTEM}-static"
+
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+    "${MINGW_PREFIX}"/bin/cmake.exe \
+      -GNinja \
+      -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
+      "${extra_config[@]}" \
+      -DBUILD_SHARED_LIBS=OFF \
+      -DWEBP_ENABLE_SWAP_16BIT_CSP=ON \
+      -DWEBP_BUILD_ANIM_UTILS=OFF \
+      -DWEBP_BUILD_CWEBP=OFF \
+      -DWEBP_BUILD_DWEBP=OFF \
+      -DWEBP_BUILD_GIF2WEBP=OFF \
+      -DWEBP_BUILD_IMG2WEBP=OFF \
+      -DWEBP_BUILD_VWEBP=OFF \
+      -DWEBP_BUILD_WEBPINFO=OFF \
+      -DWEBP_BUILD_WEBPMUX=OFF \
+      -DWEBP_BUILD_EXTRAS=OFF \
+      ../${_realname}-${pkgver}
+
+  "${MINGW_PREFIX}"/bin/cmake.exe --build .
 }
 
 package() {
-  cd "${srcdir}/$MINGW_CHOST"
-  make install DESTDIR="${pkgdir}"
+  cd "${srcdir}/build-${MSYSTEM}-static"
+
+  DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
+
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
