--- a/mingw-w64-opencv/PKGBUILD
+++ b/mingw-w64-opencv/PKGBUILD
@@ -3,14 +3,13 @@
 _realname=opencv
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.7.0
+pkgver=4.8.0
 pkgrel=1
 pkgdesc="Open Source Computer Vision Library (mingw-w64)"
 arch=('any')
 url="https://opencv.org/"
 license=("BSD")
-depends=("${MINGW_PACKAGE_PREFIX}-intel-tbb"
-         "${MINGW_PACKAGE_PREFIX}-libjpeg"
+depends=("${MINGW_PACKAGE_PREFIX}-libjpeg"
          "${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libtiff"
          "${MINGW_PACKAGE_PREFIX}-libwebp"
@@ -28,8 +27,8 @@ source=("${_realname}-${pkgver}.tar.gz"::https://github.com/opencv/opencv/archiv
         '0021-requires-vtk.patch'
         '0104-rgbd-module-missing-include.patch'
         '0106-use-find-package-with-hdf5.patch')
-sha256sums=('8df0079cdbe179748a18d44731af62a245a45ebf5085223dc03133954c662973'
-            '42df840cf9055e59d0e22c249cfb19f04743e1bdad113d31b1573d3934d62584'
+sha256sums=('cbf47ecc336d2bff36b0dcd7d6c179a9bb59e805136af6b9670ca944aef889bd'
+            'b4aef0f25a22edcd7305df830fa926ca304ea9db65de6ccd02f6cfa5f3357dbb'
             '34e63a897024d41adeadcf593480ae4074ecaed5fc7b05ba5cc2469c7669a83e'
             '7fac6a7788638f8843f562381413ce13c59038d2fafc5dc05258195128e5caf5'
             '7398e66f80be37382bd427b5eb3a1201a23113c14e71435a44df8779ea1b8a34'
@@ -91,7 +90,7 @@ build() {
     -DPKG_CONFIG_WITHOUT_PREFIX=ON \
     -DWITH_OPENCL=ON \
     -DWITH_OPENGL=ON \
-    -DWITH_TBB=ON \
+    -DWITH_TBB=OFF \
     -DWITH_XINE=OFF \
     -DBUILD_WITH_DEBUG_INFO=OFF \
     -DBUILD_DOCS=OFF \
@@ -125,6 +124,9 @@ build() {
     -DBUILD_opencv_python3=OFF \
     -DOPENCV_PYTHON_SKIP_DETECTION=ON \
     -DOPENCV_GENERATE_PKGCONFIG=ON \
+    -DBUILD_opencv_apps=OFF \
+    -DBUILD_TESTS=OFF \
+    -DBUILD_EXAMPLES=OFF \
     ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
